Removes truncate due to performance issues.

--- a/src/components/FoodList/styles.css
+++ b/src/components/FoodList/styles.css
@@ -36,6 +36,8 @@ input[type=text] {
 .item-description-visible {
   line-height: normal;
   font-size: 15px;
+  margin-top: 0px;
+  padding-bottom: 15px;
 }
 
 .item-description-visible-truncated {
